--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "browserify": "^13.0.1",
     "glob": "^7.0.3",
     "gulp": "^3.9.1",
+    "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^4.0.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-if": "^2.0.1",
+    "gulp-imagemin": "^3.0.1",
     "gulp-jasmine2-phantomjs": "^0.2.0",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
